--- a/about.html
+++ b/about.html
@@ -3,89 +3,68 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>เกี่ยวกับเรา — Heaven & Beauty</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>เกี่ยวกับเรา | Heaven and Beauty</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous"/>
 </head>
 <body>
-  <div class="bg-animation" aria-hidden="true">
-    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#f06292"/></svg></div>
-    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#e91e63"/></svg></div>
-    <div class="floating-star"><svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12,2L13.09,8.26L22,9L13.09,9.74L12,16L10.91,9.74L2,9L10.91,8.26L12,2Z" fill="#ec407a"/></svg></div>
-  </div>
-
   <header>
     <div class="container">
       <nav class="navbar" aria-label="หลัก">
         <div class="nav-left">
-          <a href="index.html#home" class="brand" aria-label="Heaven and Beauty">
-            <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="โลโก้ Heaven and Beauty" />
-          </a>
-          <ul class="nav-menu" id="navMenu">
+          <a href="index.html" class="brand"><img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="Heaven and Beauty"></a>
+          <ul class="nav-menu" id="navMenuTop">
             <li><a href="index.html">หน้าแรก</a></li>
             <li><a href="products.html">ผลิตภัณฑ์</a></li>
-            <li><a class="active" href="about.html">เกี่ยวกับเรา</a></li>
+            <li><a href="about.html" class="active">เกี่ยวกับเรา</a></li>
             <li><a href="services.html">สปา</a></li>
-            <li><a href="wellness.html">Wellness</a></li>
             <li><a href="contact.html">ติดต่อ</a></li>
           </ul>
-        </div>
-        <div class="nav-right">
-          <button class="hamburger-btn" id="hamburger" aria-label="เปิด/ปิดเมนู">
-            <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-          </button>
         </div>
       </nav>
     </div>
   </header>
 
   <section class="page-hero">
-    <div class="container inner">
-      <span class="kicker">About</span>
+    <div class="inner">
       <h1>เกี่ยวกับเรา</h1>
-      <div class="breadcrumbs"><a href="index.html">หน้าแรก</a> • <span>เกี่ยวกับเรา</span></div>
     </div>
   </section>
 
-  <section class="page-section">
-    <div class="container two-col">
-      <div>
-        <h2>ปรัชญาแบรนด์</h2>
-        <p class="lead">เรามุ่งมั่นสร้างสรรค์ผลิตภัณฑ์ออร์แกนิคคุณภาพสูง โดยเชื่อว่าความงามที่แท้จริงเริ่มจากภายใน สู่ภายนอก ทุกสูตรผ่านการคัดสรรส่วนผสมธรรมชาติที่ปลอดภัย อ่อนโยน และมีประสิทธิภาพ</p>
-        <div class="card">
-          <ul>
-            <li><strong>ความปลอดภัยก่อน:</strong> ปราศจากพาราเบน ซัลเฟต ซิลิโคน และมิเนอรัลออยล์</li>
-            <li><strong>ใส่ใจโลก:</strong> บรรจุภัณฑ์รีไซเคิลได้ และไม่ทดลองกับสัตว์</li>
-            <li><strong>โปร่งใส:</strong> ระบุแหล่งที่มาของส่วนผสมและผลการทดสอบ</li>
-          </ul>
-        </div>
-      </div>
-      <div>
-        <div class="luxury-frame">
-          <div class="frame-content">
-            <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="ภาพบรรยากาศร้าน Heaven and Beauty">
+  <section class="about">
+    <div class="container">
+      <div class="grid">
+        <div>
+          <h2>Heaven and Beauty</h2>
+          <p class="desc">
+            เราเป็นแบรนด์ความงามและสุขภาพที่มุ่งมั่นในการนำเสนอผลิตภัณฑ์ออร์แกนิคคุณภาพสูง
+            ด้วยความเชื่อมั่นว่าความงามที่แท้จริงต้องเริ่มต้นจากภายใน
+            เราคัดสรรส่วนผสมจากธรรมชาติที่ดีที่สุดจากทั่วโลก เพื่อสร้างสรรค์ผลิตภัณฑ์ที่ปลอดภัย อ่อนโยน และมีประสิทธิภาพ
+          </p>
+          <div class="product-actions">
+            <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank">แชทกับเราใน LINE</a>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="page-section">
-    <div class="container">
-      <h2>ตัวเลขที่สะท้อนความไว้วางใจ</h2>
-      <div class="about stats" style="padding:0">
-        <div class="stat"><div class="num">10+</div><div class="lbl">ปีแห่งประสบการณ์</div></div>
-        <div class="stat"><div class="num">50K+</div><div class="lbl">ลูกค้าที่ไว้วางใจ</div></div>
-        <div class="stat"><div class="num">100%</div><div class="lbl">ส่วนผสมธรรมชาติ</div></div>
+        <div class="about-visual">
+          <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="บรรยากาศร้าน">
+        </div>
       </div>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span> Heaven &amp; Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
+      <p>&copy; <span id="year"></span> Heaven &amp; Beauty</p>
     </div>
   </footer>
+
+  <nav class="bottom-nav" id="bottomNav" aria-label="เมนูล่าง">
+    <a href="index.html"><i class="fas fa-home"></i><span>หน้าแรก</span></a>
+    <a href="products.html"><i class="fas fa-box-open"></i><span>ผลิตภัณฑ์</span></a>
+    <a href="about.html"><i class="fas fa-info-circle"></i><span>เกี่ยวกับเรา</span></a>
+    <a href="services.html"><i class="fas fa-spa"></i><span>สปา</span></a>
+    <a href="contact.html"><i class="fas fa-phone-alt"></i><span>ติดต่อ</span></a>
+  </nav>
 
   <script src="assets/app.js"></script>
 </body>
