--- a/products.html
+++ b/products.html
@@ -3,55 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Heaven and Beauty - ผลิตภัณฑ์</title>
-
-  <!-- CSS หลัก -->
-  <link rel="stylesheet" href="assets/style.css">
-  <!-- ไอคอน -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <meta name="description" content="เลือกชมผลิตภัณฑ์ออร์แกนิคจาก Heaven & Beauty — สกินแคร์ เวลเนส และอโรมาเธอราปี" />
+  <title>ผลิตภัณฑ์ | Heaven and Beauty</title>
+  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous"/>
 </head>
 <body>
-  <!-- Header -->
   <header>
     <div class="container">
-      <nav class="navbar" aria-label="หลัก">
+      <nav class="navbar">
         <div class="nav-left">
-          <a href="index.html" class="brand" aria-label="Heaven and Beauty">
-            <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="โลโก้ Heaven and Beauty" />
+          <a href="index.html" class="brand">
+            <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="Heaven and Beauty" />
           </a>
-          <ul class="nav-menu" id="navMenu">
+          <ul class="nav-menu" id="navMenuTop">
             <li><a href="index.html">หน้าแรก</a></li>
             <li><a href="products.html" class="active">ผลิตภัณฑ์</a></li>
             <li><a href="about.html">เกี่ยวกับเรา</a></li>
             <li><a href="services.html">สปา</a></li>
-            <li><a href="wellness.html">Wellness</a></li>
             <li><a href="contact.html">ติดต่อ</a></li>
           </ul>
-        </div>
-        <div class="nav-right">
-          <button class="hamburger-btn" id="hamburger" aria-label="เปิด/ปิดเมนู">
-            <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-          </button>
         </div>
       </nav>
     </div>
   </header>
 
-  <!-- Hero -->
-  <section class="hero">
-    <div class="container inner">
-      <h1>ผลิตภัณฑ์ของเรา</h1>
-      <p>คัดสรรผลิตภัณฑ์ออร์แกนิคและธรรมชาติคุณภาพสูง เพื่อดูแลสุขภาพและความงามของคุณ</p>
+  <section class="page-hero">
+    <div class="inner">
+      <h1>ผลิตภัณฑ์</h1>
     </div>
   </section>
 
-  <!-- Products Grid (ไม่มีปุ่มหมวด และไม่มีปุ่มสั่งซื้อสีชมพู) -->
   <section class="products">
     <div class="container">
+      <h2>สินค้าของเรา</h2>
       <div class="products-grid">
-        <!-- 1 -->
-        <div class="product-card">
+        <!-- card 1 -->
+        <div class="product-card" data-category="skincare">
           <div class="product-image">
             <img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น" loading="lazy">
           </div>
@@ -64,24 +51,24 @@
             </div>
           </div>
         </div>
-        <!-- 2 -->
-        <div class="product-card">
+        <!-- card 2 -->
+        <div class="product-card" data-category="skincare">
           <div class="product-image">
             <img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy">
           </div>
           <div class="product-info">
             <h3>อะโทมี่ แอบโซลูท</h3>
-            <p>เอสเซนส์ ซันสกรีน เอสพีเอฟ 50+ / พีเอ++++</p>
+            <p>เอสเซนส์ ซันสกรีน SPF 50+ / PA++++</p>
             <div class="product-price">฿xxx</div>
             <div class="product-actions">
               <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
             </div>
           </div>
         </div>
-        <!-- 3 -->
-        <div class="product-card">
+        <!-- card 3 -->
+        <div class="product-card" data-category="wellness">
           <div class="product-image">
-            <img src="https://via.placeholder.com/140x140.png?text=Collagen" alt="อาหารเสริมคอลลาเจน" loading="lazy">
+            <img src="https://i.postimg.cc/yNVXWqfB/image.jpg" alt="อาหารเสริมคอลลาเจน" loading="lazy">
           </div>
           <div class="product-info">
             <h3>อาหารเสริมคอลลาเจน</h3>
@@ -92,65 +79,25 @@
             </div>
           </div>
         </div>
-        <!-- 4 -->
-        <div class="product-card">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/140x140.png?text=Lavender+Oil" alt="น้ำมันหอมระเหย ลาเวนเดอร์" loading="lazy">
-          </div>
-          <div class="product-info">
-            <h3>น้ำมันหอมระเหย ลาเวนเดอร์</h3>
-            <p>ช่วยผ่อนคลายและนอนหลับสบาย</p>
-            <div class="product-price">฿690</div>
-            <div class="product-actions">
-              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
-            </div>
-          </div>
-        </div>
-        <!-- 5 -->
-        <div class="product-card">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/140x140.png?text=Green+Tea+Mask" alt="มาส์กหน้าชาเขียว" loading="lazy">
-          </div>
-          <div class="product-info">
-            <h3>มาส์กหน้าชาเขียว</h3>
-            <p>มาส์กหน้าจากชาเขียวออร์แกนิค</p>
-            <div class="product-price">฿590</div>
-            <div class="product-actions">
-              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
-            </div>
-          </div>
-        </div>
-        <!-- 6 -->
-        <div class="product-card">
-          <div class="product-image">
-            <img src="https://via.placeholder.com/140x140.png?text=Detox+Tea" alt="ชาดีท็อกซ์" loading="lazy">
-          </div>
-          <div class="product-info">
-            <h3>ชาดีท็อกซ์</h3>
-            <p>ชาสมุนไพรออร์แกนิค ขับสารพิษและเสริมภูมิคุ้มกัน</p>
-            <div class="product-price">฿490</div>
-            <div class="product-actions">
-              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- หมายเหตุ -->
-      <div class="card" style="margin-top:16px">
-        <p style="margin:0"><strong>หมายเหตุ:</strong> สี/แพ็กเกจสินค้าอาจแตกต่างจากภาพเล็กน้อย กรุณาติดต่อแอดมินเพื่อยืนยันสต็อกก่อนชำระเงิน</p>
+        <!-- เพิ่มสินค้าอื่นได้ตามต้องการ -->
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span> Heaven &amp; Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
+      <p>&copy; <span id="year"></span> Heaven &amp; Beauty</p>
     </div>
   </footer>
 
-  <!-- JS รวมการทำงานของเมนูมือถือ/active menu/เลื่อนนุ่มนวล -->
+  <nav class="bottom-nav" id="bottomNav" aria-label="เมนูล่าง">
+    <a href="index.html"><i class="fas fa-home"></i><span>หน้าแรก</span></a>
+    <a href="products.html"><i class="fas fa-box-open"></i><span>ผลิตภัณฑ์</span></a>
+    <a href="about.html"><i class="fas fa-info-circle"></i><span>เกี่ยวกับเรา</span></a>
+    <a href="services.html"><i class="fas fa-spa"></i><span>สปา</span></a>
+    <a href="contact.html"><i class="fas fa-phone-alt"></i><span>ติดต่อ</span></a>
+  </nav>
+
   <script src="assets/app.js"></script>
 </body>
 </html>
