--- a/about.html
+++ b/about.html
@@ -37,9 +37,27 @@
         <div>
           <h2>Heaven and Beauty</h2>
           <p class="desc">
-            เราเป็นแบรนด์ความงามและสุขภาพที่มุ่งมั่นในการนำเสนอผลิตภัณฑ์ออร์แกนิคคุณภาพสูง
-            ด้วยความเชื่อมั่นว่าความงามที่แท้จริงต้องเริ่มต้นจากภายใน
-            เราคัดสรรส่วนผสมจากธรรมชาติที่ดีที่สุดจากทั่วโลก เพื่อสร้างสรรค์ผลิตภัณฑ์ที่ปลอดภัย อ่อนโยน และมีประสิทธิภาพ
+            ## Heaven and Beauty: นิยามความงามที่แท้จริงจากพลังแห่งธรรมชาติออร์แกนิค
+
+ในโลกที่เต็มไปด้วยผลิตภัณฑ์ความงามและสุขภาพมากมาย การค้นหาแบรนด์ที่เข้าใจถึงแก่นแท้ของความงามอย่างลึกซึ้งนั้นเปรียบเสมือนการค้นพบขุมทรัพย์อันล้ำค่า **Heaven and Beauty** ถือกำเนิดขึ้นจากปรัชญาอันเรียบง่ายทว่าทรงพลัง นั่นคือ **"ความงามที่แท้จริงต้องเริ่มต้นจากภายใน"** เราจึงมุ่งมั่นรังสรรค์ผลิตภัณฑ์ออร์แกนิคคุณภาพสูงที่ไม่ได้เป็นเพียงแค่เครื่องประทินผิวภายนอก แต่คือการบำรุงและฟื้นฟูอย่างยั่งยืนจากธรรมชาติสู่ตัวตนของคุณ
+
+เราเชื่อว่าธรรมชาติคือแหล่งกำเนิดของความงามอันบริสุทธิ์และเปี่ยมด้วยประสิทธิภาพ ด้วยเหตุนี้ ทีมงานผู้เชี่ยวชาญของเราจึงทุ่มเทเดินทางและคัดสรรส่วนผสมจากธรรมชาติที่ดีที่สุดจากทั่วทุกมุมโลกอย่างพิถีพิถัน ไม่ว่าจะเป็น `ดอกลาเวนเดอร์` ออร์แกนิคจากทุ่งโพรวองซ์ในฝรั่งเศสที่ขึ้นชื่อเรื่องการปลอบประโลมผิวและจิตใจ, `น้ำมันอาร์แกน` บริสุทธิ์จากโมร็อกโกที่ได้รับการขนานนามว่าเป็น "ทองคำเหลว" แห่งการบำรุง, ไปจนถึง `สารสกัดจากใบบัวบก` ออร์แกนิคในประเทศไทยที่โดดเด่นในเรื่องการฟื้นฟูและเสริมสร้างความแข็งแรงของผิวพรรณ
+
+**หัวใจของ Heaven and Beauty คือความปลอดภัย อ่อนโยน และมีประสิทธิภาพ**
+
+ผลิตภัณฑ์ทุกชิ้นของเราปราศจากสารเคมีอันตราย พาราเบน ซิลิโคน และสารสังเคราะห์อื่นๆ ที่อาจก่อให้เกิดการระคายเคืองหรือส่งผลเสียต่อสุขภาพในระยะยาว เราให้ความสำคัญกับกระบวนการผลิตที่ได้มาตรฐานสากล เพื่อให้มั่นใจได้ว่าคุณค่าจากธรรมชาติที่เราคัดสรรมานั้นจะถูกส่งมอบถึงมือคุณอย่างครบถ้วนและปลอดภัยที่สุด
+
+**มากกว่าผลิตภัณฑ์ คือประสบการณ์แห่งการดูแลแบบองค์รวม**
+
+Heaven and Beauty ไม่ได้มอบแค่ผลิตภัณฑ์ดูแลผิว แต่เราต้องการสร้างสรรค์ประสบการณ์ที่เชื่อมโยงคุณเข้ากับธรรมชาติและส่งเสริมสมดุลแห่งความงามจากภายในสู่ภายนอก เราเชื่อว่าเมื่อร่างกายได้รับการบำรุงด้วยสิ่งที่ดีที่สุดจากธรรมชาติ จิตใจก็จะผ่อนคลายและเปล่งประกายความสุขออกมา ซึ่งจะสะท้อนผ่านผิวพรรณที่สดใสและสุขภาพดีอย่างเห็นได้ชัด
+
+* **สำหรับผิวหน้า:** เรามีผลิตภัณฑ์ที่ตอบโจทย์ทุกสภาพผิว ตั้งแต่เซรั่มที่อุดมด้วยสารต้านอนุมูลอิสระจากพืชพรรณธรรมชาตินานาชนิด ช่วยลดเลือนริ้วรอยและฟื้นฟูผิวให้กลับมากระจ่างใส ไปจนถึงครีมบำรุงที่เน้นการเติมความชุ่มชื้นและสร้างเกราะป้องกันผิวให้แข็งแรง
+* **สำหรับการดูแลผิวกาย:** สัมผัสประสบการณ์การอาบน้ำและบำรุงผิวที่แสนผ่อนคลายด้วยผลิตภัณฑ์ที่มีส่วนผสมของน้ำมันหอมระเหยออร์แกนิค ช่วยทำความสะอาดอย่างอ่อนโยนพร้อมบำรุงผิวให้เนียนนุ่มน่าสัมผัส
+* **สำหรับการดูแลเส้นผมและหนังศีรษะ:** คืนความสมดุลให้แก่เส้นผมและหนังศีรษะด้วยแชมพูและครีมนวดผมสูตรออร์แกนิคที่ช่วยลดการหลุดร่วงและกระตุ้นการเกิดใหม่ของเส้นผมอย่างเป็นธรรมชาติ
+
+**ร่วมเดินทางสู่ความงามที่ยั่งยืนกับ Heaven and Beauty**
+
+เราขอเชิญชวนคุณมาร่วมสัมผัสประสบการณ์ความงามที่แท้จริง ความงามที่ไม่ได้ฉาบฉวยอยู่แค่ภายนอก แต่คือความงามที่เปล่งประกายจากสุขภาพที่ดีและความสมดุลของร่างกายและจิตใจ ให้ Heaven and Beauty เป็นส่วนหนึ่งในการดูแลและส่งเสริมความงามในแบบฉบับของคุณ...ความงามที่เริ่มต้นจากธรรมชาติและความใส่ใจในทุกรายละเอียด
           </p>
           <div class="product-actions">
             <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank">แชทกับเราใน LINE</a>
