--- a/products.html
+++ b/products.html
@@ -79,6 +79,20 @@
             </div>
           </div>
         </div>
+        <!-- card 4 -->
+        <div class="product-card" data-category="wellness">
+          <div class="product-image">
+            <img src="https://i.postimg.cc/yNVXWqfB/image.jpg" alt="อาหารเสริมคอลลาเจน" loading="lazy">
+          </div>
+          <div class="product-info">
+            <h3>อาหารเสริมคอลลาเจน</h3>
+            <p>คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p>
+            <div class="product-price">฿1,590</div>
+            <div class="product-actions">
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
+            </div>
+          </div>
+        </div>
         <!-- เพิ่มสินค้าอื่นได้ตามต้องการ -->
       </div>
     </div>
