--- a/products.html
+++ b/products.html
@@ -68,12 +68,12 @@
         <!-- card 3 -->
         <div class="product-card" data-category="wellness">
           <div class="product-image">
-            <img src="https://i.postimg.cc/yNVXWqfB/image.jpg" alt="อาหารเสริมคอลลาเจน" loading="lazy">
+            <img src="https://i.postimg.cc/yNVXWqfB/image.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ เฮโมฮิม" loading="lazy">
           </div>
           <div class="product-info">
-            <h3>อาหารเสริมคอลลาเจน</h3>
-            <p>คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p>
-            <div class="product-price">฿1,590</div>
+            <h3>ผลิตภัณฑ์เสริมอาหาร อะโทมี่ เฮโมฮิม</h3>
+            <p>ตัวกันเเฮงค์</p>
+            <div class="product-price">฿xxxx</div>
             <div class="product-actions">
               <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
             </div>
@@ -82,12 +82,12 @@
         <!-- card 4 -->
         <div class="product-card" data-category="wellness">
           <div class="product-image">
-            <img src="https://i.postimg.cc/yNVXWqfB/image.jpg" alt="อาหารเสริมคอลลาเจน" loading="lazy">
+            <img src="https://i.postimg.cc/TPRqh8kd/วิตซี.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ ไวทัล คัลเลอร์ วิตามิน ซี" loading="lazy">
           </div>
           <div class="product-info">
-            <h3>อาหารเสริมคอลลาเจน</h3>
-            <p>คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p>
-            <div class="product-price">฿1,590</div>
+            <h3>ผลิตภัณฑ์เสริมอาหาร อะโทมี่ ไวทัล คัลเลอร์ วิตามิน ซี</h3>
+            <p>วิตามินต้านอนุมูลอิสระและพลังแห่งคัลเลอร์ที่ร่างกายต้องการ</p>
+            <div class="product-price">฿xxxx</div>
             <div class="product-actions">
               <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
             </div>
