--- a/products.html
+++ b/products.html
@@ -93,6 +93,20 @@
             </div>
           </div>
         </div>
+         <!-- card 5 -->
+        <div class="product-card" data-category="wellness">
+          <div class="product-image">
+            <img src="https://i.postimg.cc/prfFWyG8/250416000039889.jpg" alt="อะโทมี่ อะเดลิกา เดอะ นิว โกลด์ คอลลาเจน แอมพูล คุชชั่น" loading="lazy">
+          </div>
+          <div class="product-info">
+            <h3>อะโทมี่ อะเดลิกา เดอะ นิว โกลด์ คอลลาเจน แอมพูล คุชชั่น</h3>
+            <p>คุชชั่นที่อุดมไปด้วยแอมพูล ให้ผิวเปล่งประกาย ฉ่ำวาว</p>
+            <div class="product-price">฿xxxx</div>
+            <div class="product-actions">
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
+            </div>
+          </div>
+        </div>
         <!-- เพิ่มสินค้าอื่นได้ตามต้องการ -->
       </div>
     </div>
