--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="grid">
         <div class="about-text">
           <h2>เกี่ยวกับเรา</h2>
-          <p class="desc">แบรนด์ความงามและสุขภาพที่มุ่งมั่นในการนำเสนอผลิตภัณฑ์ออร์แกนิคคุณภาพสูง ด้วยความเชื่อว่าความงามที่แท้จริงเริ่มต้นจากภายใน</p>
+          <p class="desc">แบรนด์ความงามและสุขภาพที่มุ่งมั่นในการนำเสนอผลิตภัณฑ์ออร์แกนิคคุณภาพสูง ด้วยความเชื่อว่าความงามที่แท้จริงเริ่มต้นจากภายใน Heaven and Beauty: นิยามความงามที่แท้จริงจากพลังแห่งธรรมชาติออร์แกนิค ในโลกที่เต็มไปด้วยผลิตภัณฑ์ความงามและสุขภาพมากมาย การค้นหาแบรนด์ที่เข้าใจถึงแก่นแท้ของความงามอย่างลึกซึ้งนั้นเปรียบเสมือนการค้นพบขุมทรัพย์อันล้ำค่า</p>
         </div>
         <div class="about-visual">
           <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="บรรยากาศร้าน">
