--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Heaven and Beauty - Wellness & Organic Beauty</title>
-  <meta name="description" content="Heaven and Beauty — ผลิตภัณฑ์ออร์แกนิค สปา และเวลเนส เพื่อสุขภาพและความงามจากธรรมชาติ" />
+
+  <!-- CSS -->
   <link rel="stylesheet" href="assets/style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous"/>
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta name="description" content="Heaven and Beauty — Wellness & Organic Beauty ศูนย์รวมผลิตภัณฑ์ออร์แกนิค สปา และเวลเนส" />
 </head>
 <body>
   <!-- Header -->
@@ -17,7 +20,7 @@
           <a href="index.html" class="brand" aria-label="Heaven and Beauty">
             <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="โลโก้ Heaven and Beauty" />
           </a>
-          <ul class="nav-menu" id="navMenuTop">
+          <ul class="nav-menu" id="navMenu">
             <li><a href="index.html" class="active">หน้าแรก</a></li>
             <li><a href="products.html">ผลิตภัณฑ์</a></li>
             <li><a href="about.html">เกี่ยวกับเรา</a></li>
@@ -30,10 +33,10 @@
   </header>
 
   <!-- Hero -->
-  <section class="hero">
+  <section class="hero" id="home">
     <div class="container inner">
       <h1>ยินดีต้อนรับสู่ Heaven and Beauty</h1>
-      <p>เราคัดสรรผลิตภัณฑ์ออร์แกนิคคุณภาพสูง เพื่อสุขภาพและความงามจากธรรมชาติ</p>
+      <p>เราคัดสรรส่วนผสมที่ดีที่สุดจากธรรมชาติ เพื่อสร้างสรรค์ผลิตภัณฑ์ออร์แกนิคที่ปลอดภัยและอ่อนโยนต่อผิวคุณ ดูแลสุขภาพและความงามอย่างธรรมชาติ</p>
       <a href="products.html" class="cta-button">สำรวจผลิตภัณฑ์</a>
     </div>
   </section>
@@ -43,9 +46,10 @@
     <div class="container">
       <h2>ผลิตภัณฑ์แนะนำ</h2>
       <div class="products-grid">
+        <!-- 1 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น">
+            <img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น" loading="lazy">
           </div>
           <div class="product-info">
             <h3>อะโทมี่ เฟรช ซัน โลชั่น</h3>
@@ -56,10 +60,10 @@
             </div>
           </div>
         </div>
-
+        <!-- 2 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="อะโทมี่ แอบโซลูท">
+            <img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy">
           </div>
           <div class="product-info">
             <h3>อะโทมี่ แอบโซลูท</h3>
@@ -70,10 +74,10 @@
             </div>
           </div>
         </div>
-
+        <!-- 3 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="https://i.postimg.cc/yNVXWqfB/image.jpg" alt="อาหารเสริมคอลลาเจน">
+            <img src="https://i.postimg.cc/yNVXWqfB/image.jpg" alt="อาหารเสริมคอลลาเจน" loading="lazy">
           </div>
           <div class="product-info">
             <h3>อาหารเสริมคอลลาเจน</h3>
@@ -84,51 +88,35 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </section>
 
-  <!-- About (สรุปสั้นในหน้าแรก) -->
-  <section class="about">
-    <div class="container">
-      <div class="grid">
-        <div class="about-text">
-          <h2>เกี่ยวกับเรา</h2>
-          <p class="desc">แบรนด์ความงามและสุขภาพที่มุ่งมั่นในการนำเสนอผลิตภัณฑ์ออร์แกนิคคุณภาพสูง ด้วยความเชื่อว่าความงามที่แท้จริงเริ่มต้นจากภายใน Heaven and Beauty: นิยามความงามที่แท้จริงจากพลังแห่งธรรมชาติออร์แกนิค ในโลกที่เต็มไปด้วยผลิตภัณฑ์ความงามและสุขภาพมากมาย การค้นหาแบรนด์ที่เข้าใจถึงแก่นแท้ของความงามอย่างลึกซึ้งนั้นเปรียบเสมือนการค้นพบขุมทรัพย์อันล้ำค่า</p>
-        </div>
-        <div class="about-visual">
-          <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="บรรยากาศร้าน">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Services (สรุปสั้นในหน้าแรก) -->
-  <section class="services">
+  <!-- Services -->
+  <section class="services" id="services">
     <div class="container">
       <h2>สปาและบริการนวด</h2>
       <div class="services-grid">
         <div class="service-card">
           <div class="service-icon"><i class="fas fa-spa"></i></div>
-          <h3>นวดอโรมา</h3>
-          <p>ผ่อนคลายด้วยน้ำมันหอมระเหยบริสุทธิ์</p>
+          <h3>นวดอโรมาเธอราปี</h3>
+          <p>ผ่อนคลายด้วยน้ำมันหอมระเหยบริสุทธิ์ ลดความเครียดและบำรุงผิวพรรณ</p>
           <div class="service-price">60 นาที / ฿1,200</div>
-          <a href="https://lin.ee/piYhcCd" class="line-btn" target="_blank">จองผ่าน LINE</a>
+          <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="line-btn">จองผ่าน LINE</a>
         </div>
         <div class="service-card">
           <div class="service-icon"><i class="fas fa-hand-holding-heart"></i></div>
           <h3>นวดแผนไทย</h3>
-          <p>ศาสตร์การบำบัดแบบดั้งเดิม คลายกล้ามเนื้อ</p>
+          <p>ศาสตร์แห่งการบำบัดแบบดั้งเดิม คลายกล้ามเนื้อและปรับสมดุลร่างกาย</p>
           <div class="service-price">90 นาที / ฿990</div>
-          <a href="https://lin.ee/piYhcCd" class="line-btn" target="_blank">จองผ่าน LINE</a>
+          <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="line-btn">จองผ่าน LINE</a>
         </div>
         <div class="service-card">
           <div class="service-icon"><i class="fas fa-hot-tub"></i></div>
           <h3>สปาหินร้อน</h3>
-          <p>ผ่อนคลายกล้ามเนื้อส่วนลึก กระตุ้นการไหลเวียนโลหิต</p>
+          <p>ใช้หินภูเขาไฟเพื่อผ่อนคลายกล้ามเนื้อ กระตุ้นการไหลเวียนโลหิต</p>
           <div class="service-price">75 นาที / ฿1,800</div>
-          <a href="https://lin.ee/piYhcCd" class="line-btn" target="_blank">จองผ่าน LINE</a>
+          <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="line-btn">จองผ่าน LINE</a>
         </div>
       </div>
     </div>
@@ -137,19 +125,11 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span> Heaven &amp; Beauty</p>
+      <p>&copy; <span id="year"></span> Heaven &amp; Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
     </div>
   </footer>
 
-  <!-- Bottom Navigation (Mobile) -->
-  <nav class="bottom-nav" id="bottomNav" aria-label="เมนูล่าง">
-    <a href="index.html"><i class="fas fa-home"></i><span>หน้าแรก</span></a>
-    <a href="products.html"><i class="fas fa-box-open"></i><span>ผลิตภัณฑ์</span></a>
-    <a href="about.html"><i class="fas fa-info-circle"></i><span>เกี่ยวกับเรา</span></a>
-    <a href="services.html"><i class="fas fa-spa"></i><span>สปา</span></a>
-    <a href="contact.html"><i class="fas fa-phone-alt"></i><span>ติดต่อ</span></a>
-  </nav>
-
+  <!-- JS -->
   <script src="assets/app.js"></script>
 </body>
 </html>
