--- a/index.html
+++ b/index.html
@@ -128,8 +128,19 @@
       <p>&copy; <span id="year"></span> Heaven &amp; Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
     </div>
   </footer>
+<!-- ===== Bottom Navigation (Mobile) ===== -->
+<div class="bottom-nav" role="navigation" aria-label="เมนูด้านล่าง">
+  <div class="inner">
+    <a href="index.html"     data-page="index.html"><span class="icon">🏠</span><span>หน้าแรก</span></a>
+    <a href="products.html"  data-page="products.html"><span class="icon">🛍️</span><span>ผลิตภัณฑ์</span></a>
+    <a href="about.html"     data-page="about.html"><span class="icon">ℹ️</span><span>เกี่ยวกับเรา</span></a>
+    <a href="services.html"  data-page="services.html"><span class="icon">💆‍♀️</span><span>สปา</span></a>
+    <a href="contact.html"   data-page="contact.html"><span class="icon">📞</span><span>ติดต่อ</span></a>
+  </div>
+</div>
 
-  <!-- JS -->
-  <script src="assets/app.js"></script>
+<!-- สคริปต์หลักของเว็บ (ให้แน่ใจว่ามีอยู่ทุกหน้า) -->
+<script src="assets/app.js"></script>
+
 </body>
 </html>
