--- a/about.html
+++ b/about.html
@@ -4,15 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>เกี่ยวกับเรา | Heaven and Beauty</title>
+  <meta name="description" content="Heaven and Beauty — ความงามที่เริ่มจากภายใน ด้วยพลังออร์แกนิคแท้ ปลอดภัย อ่อนโยน และมีประสิทธิภาพ">
   <link rel="stylesheet" href="assets/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous"/>
 </head>
 <body>
+  <!-- Header -->
   <header>
     <div class="container">
       <nav class="navbar" aria-label="หลัก">
         <div class="nav-left">
-          <a href="index.html" class="brand"><img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="Heaven and Beauty"></a>
+          <a href="index.html" class="brand" aria-label="Heaven and Beauty">
+            <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="Heaven and Beauty">
+          </a>
           <ul class="nav-menu" id="navMenuTop">
             <li><a href="index.html">หน้าแรก</a></li>
             <li><a href="products.html">ผลิตภัณฑ์</a></li>
@@ -25,70 +29,123 @@
     </div>
   </header>
 
+  <!-- Page Hero -->
   <section class="page-hero">
     <div class="inner">
+      <span class="kicker">Our Story</span>
       <h1>เกี่ยวกับเรา</h1>
+      <p class="lead" style="max-width:820px;margin:12px auto 0;">
+        นิยามความงามที่แท้จริงจากธรรมชาติออร์แกนิค—ปลอดภัย อ่อนโยน และเห็นผลอย่างยั่งยืน
+      </p>
     </div>
   </section>
 
+  <!-- About / Brand Story -->
   <section class="about">
     <div class="container">
       <div class="grid">
-        <div>
+        <div class="about-text">
           <h2>Heaven and Beauty</h2>
+          <div class="subtitle">ความงามที่เริ่มต้นจากภายใน</div>
+
           <p class="desc">
-            Heaven and Beauty: นิยามความงามที่แท้จริงจากพลังแห่งธรรมชาติออร์แกนิค
-
-ในโลกที่เต็มไปด้วยผลิตภัณฑ์ความงามและสุขภาพมากมาย การค้นหาแบรนด์ที่เข้าใจถึงแก่นแท้ของความงามอย่างลึกซึ้งนั้นเปรียบเสมือนการค้นพบขุมทรัพย์อันล้ำค่า Heaven and Beauty ถือกำเนิดขึ้นจากปรัชญาอันเรียบง่ายทว่าทรงพลัง นั่นคือ "ความงามที่แท้จริงต้องเริ่มต้นจากภายใน" เราจึงมุ่งมั่นรังสรรค์ผลิตภัณฑ์ออร์แกนิคคุณภาพสูงที่ไม่ได้เป็นเพียงแค่เครื่องประทินผิวภายนอก แต่คือการบำรุงและฟื้นฟูอย่างยั่งยืนจากธรรมชาติสู่ตัวตนของคุณ
-
-เราเชื่อว่าธรรมชาติคือแหล่งกำเนิดของความงามอันบริสุทธิ์และเปี่ยมด้วยประสิทธิภาพ ด้วยเหตุนี้ ทีมงานผู้เชี่ยวชาญของเราจึงทุ่มเทเดินทางและคัดสรรส่วนผสมจากธรรมชาติที่ดีที่สุดจากทั่วทุกมุมโลกอย่างพิถีพิถัน ไม่ว่าจะเป็น ดอกลาเวนเดอร์ ออร์แกนิคจากทุ่งโพรวองซ์ในฝรั่งเศสที่ขึ้นชื่อเรื่องการปลอบประโลมผิวและจิตใจ, น้ำมันอาร์แกน บริสุทธิ์จากโมร็อกโกที่ได้รับการขนานนามว่าเป็น "ทองคำเหลว" แห่งการบำรุง, ไปจนถึง สารสกัดจากใบบัวบก ออร์แกนิคในประเทศไทยที่โดดเด่นในเรื่องการฟื้นฟูและเสริมสร้างความแข็งแรงของผิวพรรณ
-
-หัวใจของ Heaven and Beauty คือความปลอดภัย อ่อนโยน และมีประสิทธิภาพ
-
-ผลิตภัณฑ์ทุกชิ้นของเราปราศจากสารเคมีอันตราย พาราเบน ซิลิโคน และสารสังเคราะห์อื่นๆ ที่อาจก่อให้เกิดการระคายเคืองหรือส่งผลเสียต่อสุขภาพในระยะยาว เราให้ความสำคัญกับกระบวนการผลิตที่ได้มาตรฐานสากล เพื่อให้มั่นใจได้ว่าคุณค่าจากธรรมชาติที่เราคัดสรรมานั้นจะถูกส่งมอบถึงมือคุณอย่างครบถ้วนและปลอดภัยที่สุด
-
-มากกว่าผลิตภัณฑ์ คือประสบการณ์แห่งการดูแลแบบองค์รวม
-
-Heaven and Beauty ไม่ได้มอบแค่ผลิตภัณฑ์ดูแลผิว แต่เราต้องการสร้างสรรค์ประสบการณ์ที่เชื่อมโยงคุณเข้ากับธรรมชาติและส่งเสริมสมดุลแห่งความงามจากภายในสู่ภายนอก เราเชื่อว่าเมื่อร่างกายได้รับการบำรุงด้วยสิ่งที่ดีที่สุดจากธรรมชาติ จิตใจก็จะผ่อนคลายและเปล่งประกายความสุขออกมา ซึ่งจะสะท้อนผ่านผิวพรรณที่สดใสและสุขภาพดีอย่างเห็นได้ชัด
-
-สำหรับผิวหน้า:เรามีผลิตภัณฑ์ที่ตอบโจทย์ทุกสภาพผิว ตั้งแต่เซรั่มที่อุดมด้วยสารต้านอนุมูลอิสระจากพืชพรรณธรรมชาตินานาชนิด ช่วยลดเลือนริ้วรอยและฟื้นฟูผิวให้กลับมากระจ่างใส ไปจนถึงครีมบำรุงที่เน้นการเติมความชุ่มชื้นและสร้างเกราะป้องกันผิวให้แข็งแรง
-สำหรับการดูแลผิวกาย:สัมผัสประสบการณ์การอาบน้ำและบำรุงผิวที่แสนผ่อนคลายด้วยผลิตภัณฑ์ที่มีส่วนผสมของน้ำมันหอมระเหยออร์แกนิค ช่วยทำความสะอาดอย่างอ่อนโยนพร้อมบำรุงผิวให้เนียนนุ่มน่าสัมผัส
-สำหรับการดูแลเส้นผมและหนังศีรษะ:คืนความสมดุลให้แก่เส้นผมและหนังศีรษะด้วยแชมพูและครีมนวดผมสูตรออร์แกนิคที่ช่วยลดการหลุดร่วงและกระตุ้นการเกิดใหม่ของเส้นผมอย่างเป็นธรรมชาติ
-
-ร่วมเดินทางสู่ความงามที่ยั่งยืนกับ Heaven and Beauty**
-
-เราขอเชิญชวนคุณมาร่วมสัมผัสประสบการณ์ความงามที่แท้จริง ความงามที่ไม่ได้ฉาบฉวยอยู่แค่ภายนอก แต่คือความงามที่เปล่งประกายจากสุขภาพที่ดีและความสมดุลของร่างกายและจิตใจ ให้ Heaven and Beauty เป็นส่วนหนึ่งในการดูแลและส่งเสริมความงามในแบบฉบับของคุณ...ความงามที่เริ่มต้นจากธรรมชาติและความใส่ใจในทุกรายละเอียด
+            ในโลกที่ทางเลือกมีมากมาย เราเลือก “สิ่งที่ดีที่สุดจากธรรมชาติ” เท่านั้น
+            ด้วยปรัชญา <strong>True Beauty Begins Within</strong> ทุกสูตรจึงถูกออกแบบให้
+            ปลอดสารระคายเคือง เพื่อมอบผลลัพธ์ที่นุ่มละมุนต่อผิว และดีต่อใจในระยะยาว
           </p>
-          <div class="product-actions">
-            <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank">แชทกับเราใน LINE</a>
+
+          <div class="card" style="margin:18px 0;">
+            <p class="lead" style="margin:0">
+              <strong>หัวใจของเรา:</strong> <em>ปลอดภัย — อ่อนโยน — มีประสิทธิภาพ</em><br>
+              ทุกชิ้น <strong>ปราศจาก</strong> พาราเบน ซิลิโคน น้ำหอมสังเคราะห์ และสารอันตราย
+              ผลิตตามมาตรฐานสากล เพื่อให้คุณได้รับคุณค่าจากธรรมชาติอย่างเต็มเปี่ยม
+            </p>
+          </div>
+
+          <div class="stats" style="margin-top:10px">
+            <div class="stat"><div class="num">10+</div><div class="lbl">ปีแห่งความเชี่ยวชาญ</div></div>
+            <div class="stat"><div class="num">50K+</div><div class="lbl">ลูกค้าที่ไว้วางใจ</div></div>
+            <div class="stat"><div class="num">100%</div><div class="lbl">แนวคิดออร์แกนิค</div></div>
+          </div>
+
+          <div class="page-section" style="padding-top:28px;">
+            <h3 class="kicker">Signature Ingredients</h3>
+            <ul style="margin:12px 0 0; padding-left:18px; line-height:1.9; color:#555;">
+              <li><strong>ลาเวนเดอร์ ออร์แกนิค (Provence, FR)</strong> — ปลอบประโลมผิวและจิตใจ</li>
+              <li><strong>อาร์แกน ออยล์ (Morocco)</strong> — “ทองคำเหลว” เติมความชุ่มชื้นล้ำลึก</li>
+              <li><strong>ใบบัวบก ออร์แกนิค (Thailand)</strong> — ฟื้นฟูและเสริมเกราะป้องกันผิว</li>
+            </ul>
+          </div>
+
+          <div class="page-section" style="padding-top:18px;">
+            <h3 class="kicker">Holistic Care</h3>
+            <ul style="margin:12px 0 0; padding-left:18px; line-height:1.9; color:#555;">
+              <li><strong>ผิวหน้า</strong> — เซรั่ม/ครีมบำรุง ต้านอนุมูลอิสระ ช่วยให้ผิวกระจ่างใสและแข็งแรง</li>
+              <li><strong>ผิวกาย</strong> — ทำความสะอาดอย่างอ่อนโยน พร้อมบำรุงให้เนียนนุ่ม</li>
+              <li><strong>เส้นผม & หนังศีรษะ</strong> — คืนสมดุล ลดหลุดร่วง และกระตุ้นการเกิดใหม่อย่างเป็นธรรมชาติ</li>
+            </ul>
+          </div>
+
+          <div class="product-actions" style="margin-top:22px;">
+            <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">แชทกับเราใน LINE</a>
           </div>
         </div>
+
+        <!-- Visual -->
         <div class="about-visual">
-          <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="บรรยากาศร้าน">
+          <div class="luxury-frame">
+            <div class="frame-content">
+              <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="บรรยากาศร้าน Heaven and Beauty" loading="lazy">
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- Values (optional pretty block,ใช้สไตล์เดิม) -->
+  <section class="features">
+    <div class="container">
+      <h2>สิ่งที่เรายึดมั่น</h2>
+      <div class="features-grid">
+        <div class="feature-card">
+          <div class="feature-icon">🌿</div>
+          <h3>ออร์แกนิคแท้</h3>
+          <p>เน้นส่วนผสมจากธรรมชาติ ปราศจากสารที่ทำร้ายผิวและสิ่งแวดล้อม</p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">🧪</div>
+          <h3>พิถีพิถันทุกรายละเอียด</h3>
+          <p>พัฒนาสูตรอย่างสมดุลระหว่างความอ่อนโยนและประสิทธิภาพ</p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">✨</div>
+          <h3>ผลลัพธ์ที่รู้สึกได้</h3>
+          <p>ผิวที่สุขภาพดี เปล่งปลั่งจากภายใน สวยงามอย่างยั่งยืน</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span> Heaven &amp; Beauty</p>
+      <p>&copy; <span id="year"></span> Heaven &amp; Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
     </div>
   </footer>
 
- <!-- ===== Bottom Navigation (Mobile) ===== -->
-<div class="bottom-nav" role="navigation" aria-label="เมนูด้านล่าง">
-  <div class="inner">
-    <a href="index.html"     data-page="index.html"><span class="icon">🏠</span><span>หน้าแรก</span></a>
-    <a href="products.html"  data-page="products.html"><span class="icon">🛍️</span><span>ผลิตภัณฑ์</span></a>
-    <a href="about.html"     data-page="about.html"><span class="icon">ℹ️</span><span>เกี่ยวกับเรา</span></a>
-    <a href="services.html"  data-page="services.html"><span class="icon">💆‍♀️</span><span>สปา</span></a>
-    <a href="contact.html"   data-page="contact.html"><span class="icon">📞</span><span>ติดต่อ</span></a>
+  <!-- Bottom Navigation (Mobile) -->
+  <div class="bottom-nav" role="navigation" aria-label="เมนูด้านล่าง">
+    <div class="inner">
+      <a href="index.html"     data-page="index.html"><span class="icon">🏠</span><span>หน้าแรก</span></a>
+      <a href="products.html"  data-page="products.html"><span class="icon">🛍️</span><span>ผลิตภัณฑ์</span></a>
+      <a href="about.html"     data-page="about.html"><span class="icon">ℹ️</span><span>เกี่ยวกับเรา</span></a>
+      <a href="services.html"  data-page="services.html"><span class="icon">💆‍♀️</span><span>สปา</span></a>
+      <a href="contact.html"   data-page="contact.html"><span class="icon">📞</span><span>ติดต่อ</span></a>
+    </div>
   </div>
-</div>
 
-<!-- สคริปต์หลักของเว็บ (ให้แน่ใจว่ามีอยู่ทุกหน้า) -->
-<script src="assets/app.js"></script>
-
+  <!-- JS -->
+  <script src="assets/app.js"></script>
 </body>
 </html>
